updated my profile page

--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -6,6 +6,8 @@
 
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/profile.css')}}">
+<body background="{{ url_for('static', filename='img/back3.jpg') }}"></body>
+
 
 {% endblock %}
 
