--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,6 +1,14 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
+<!-- Styles block -->
+{% block styles %}
 
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/profile.css')}}">
+<body background="{{ url_for('static', filename='img/back3.jpg') }}"></body>
+
+
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
