--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -5,6 +5,8 @@
 
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/blog.css')}}">
+<body background="{{ url_for('static', filename='img/back3.jpg') }}"></body>
+
 
 {% endblock %}
 
