--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,11 +4,12 @@
 
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
-
+<body background="{{ url_for('static', filename='img/back3.jpg') }}"></body>
 {% endblock %}
 
 <!-- Content block -->
 {% block content %}
+<link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
 
 
 <div class="container space">
