changed my font to my navigation bar

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,6 @@
+
 <div class="navbar navbar-inverse" role="navigation">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
